--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -3,7 +3,7 @@ allow_bold = true
 audible_bell = false
 clickable_url = true
 dynamic_title = true
-font = FiraCode Nerd Font Mono 11
+font = Source Code Pro 11
 scroll_on_output = false
 scrollback_lines = 10000
 search_wrap = true
