--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -1,5 +1,14 @@
+set $mod Mod4
+set $ter /usr/bin/termite
+set $height 30
+set $default_gaps_inner 10
+set $default_gaps_outer 0
+set $wallpaper '$(find $HOME/.local/share/wallpapers/ -type f -iname "*.jpg" | shuf -n 1)'
+
 include base16-onedark.config
 
+output eDP-1 scale 2
+output * bg $wallpaper fill
 
 # Basic color configuration using the Base16 variables for windows and borders.
 # Property Name         Border  BG      Text    Indicator Child Border
@@ -11,10 +20,6 @@ client.placeholder      $base00 $base00 $base05 $base00 $base00
 client.background       $base07
 
 
-set $height 30
-set $default_gaps_inner 10
-set $default_gaps_outer 0
-
 font pango:Inconsolata, FontAwesome 12
 
 set $ws1  "1:  "
@@ -22,10 +27,10 @@ set $ws2  "2:  "
 set $ws3  "3:  "
 set $ws4  "4:  "
 set $ws5  "5:  "
-set $ws6  "6:  "
+set $ws6  "6:  "
 set $ws7  "7:  "
-set $ws8  "8:  "
-set $ws9  "9:  "
+set $ws8  "8:  "
+set $ws9  "9:  "
 set $ws0 "10:  "
 
 gaps inner $default_gaps_inner
@@ -39,13 +44,13 @@ floating_minimum_size -1 x -1
 floating_maximum_size -1 x -1
 
 # assign apps to workspaces
-assign [class="jetbrains-idea-ce"]         $ws1
-assign [class="Code|Sublime_text"]         $ws2
-assign [class="URxvt"]                     $ws3
-assign [class="Gnome-terminal"]            $ws4
-assign [class="DBeaver"]                   $ws5
-assign [class="Chromium|chromium|Firefox"] $ws7
-assign [class="slack|Slack"]               $ws8
+assign [class="jetbrains-idea-ce"]               $ws1
+assign [app_id="sublime_text"]                   $ws2
+assign [app_id="termite"]                        $ws3
+assign [class="Gnome-terminal"]                  $ws4
+assign [class="DBeaver"]                         $ws5
+assign [class="Chromium|Brave-browser|Firefox"]  $ws7
+assign [class="slack|Slack"]                     $ws8
 
 
 for_window [window_role="pop-up"]          floating enable
@@ -137,6 +142,10 @@ bindsym $mod+shift+0 move container to workspace $ws0
 bindsym $mod+ctrl+h move workspace to output left
 bindsym $mod+ctrl+s move workspace to output right
 
+bindsym XF86MonBrightnessDown exec brightnessctl -d intel_backlight set 5%-
+bindsym XF86MonBrightnessUp exec brightnessctl -d intel_backlight set +5%
+
+bindsym $mod+p exec grim -g "$(slurp)" $HOME/screenshots/$(date +'%Y-%m-%d_%T.png')
 
 # modes
 
@@ -155,14 +164,13 @@ mode "$resize" {
 
 # system mode
 bindsym $mod+i mode "$system"
-set $system System (c) reload config, (i) restart i3, (l) lock, (e) exit, (r) reboot, (s) shutdown
+set $system System (c) reload config, (l) lock, (e) exit, (r) reboot, (s) shutdown
 mode "$system" {
-  bindsym l exec --no-startup-id i3lock-fancy, mode "default"
-  bindsym e exit, mode "default"
+  bindsym l exec --no-startup-id swaylock-fancy, mode "default"
+  bindsym e swaymsg exit, mode "default"
   bindsym r exec --no-startup-id systemctl reboot, mode "default"
   bindsym s exec --no-startup-id systemctl poweroff, mode "default"
   bindsym c reload, mode "default"
-  bindsym i restart, mode "default"
 
   bindsym Return mode "default"
   bindsym Escape mode "default"
@@ -170,6 +178,10 @@ mode "$system" {
 
 
 bar {
+	position top
+	strip_workspace_numbers yes
+	font pango:Inconsolata, FontAwesome 12
+
 	colors {
 	    background $base00
 	    separator  $base01
@@ -182,7 +194,7 @@ bar {
 	    urgent_workspace    $base08 $base08 $base00
 	    binding_mode        $base00 $base0A $base00
 	}
-	status_command /usr/local/bin/bumblebee-status \
+	status_command /usr/bin/bumblebee-status \
 		--markup pango \
 		-m \
 			taskwarrior \
@@ -197,3 +209,9 @@ bar {
 			github.token="" \
 		-t onedark-powerline
 }
+
+exec swayidle -w \
+	timeout 300 'swaylock-fancy' \
+	timeout 600 'swaymsg "output * dpms off"' \
+	resume 'swaymsg "output * dpms on"' \
+	before-sleep 'swaylock-fancy'
