--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -8,9 +8,12 @@ set $wallpaper '$(find $HOME/.local/share/wallpapers/ -type f -iname "*.jpg" | s
 include base16-onedark.config
 
 output eDP-1 scale 2
+output eDP-1 pos 0 0 res 3840x2160
+output HDMI-A-1 scale 1
+output HDMI-A-1 pos 1920 0 res 1920x1080
+output HDMI-A-1 subpixel rgb
+
 output * bg $wallpaper fill
-
-
 
 input type:keyboard {
     xkb_layout se_sv_dvorak
@@ -19,8 +22,6 @@ input type:keyboard {
 input 65261:4871:ErgoDox_EZ_ErgoDox_EZ {
     xkb_layout devdvorak
 }
-
-
 
 # Basic color configuration using the Base16 variables for windows and borders.
 # Property Name         Border  BG      Text    Indicator Child Border
@@ -31,8 +32,7 @@ client.urgent           $base08 $base08 $base00 $base08 $base08
 client.placeholder      $base00 $base00 $base05 $base00 $base00
 client.background       $base07
 
-
-font pango:Inconsolata, FontAwesome 12
+font pango:FontAwesome, Inconsolata 12
 
 set $ws1  "1:  "
 set $ws2  "2:  "
@@ -57,7 +57,7 @@ floating_maximum_size -1 x -1
 
 # assign apps to workspaces
 assign [class="jetbrains-idea-ce"]               $ws1
-assign [app_id="sublime_text"]                   $ws2
+assign [app_id="sublime_text|code-oss"]          $ws2
 assign [app_id="termite"]                        $ws3
 assign [class="Gnome-terminal"]                  $ws4
 assign [class="DBeaver"]                         $ws5
@@ -193,7 +193,7 @@ mode "$system" {
 bar {
 	position top
 	strip_workspace_numbers yes
-	font pango:Inconsolata, FontAwesome 12
+    font pango:FontAwesome, Inconsolata 12
 
 	colors {
 	    background $base00
@@ -208,7 +208,6 @@ bar {
 	    binding_mode        $base00 $base0A $base00
 	}
 	status_command /home/cvelin/code/bumblebee-status/bumblebee-status \
-        -d \
 		--markup pango \
 		-m \
             taskwarrior2 \
@@ -223,6 +222,8 @@ bar {
 			github.token="" \
 		-t onedark-powerline
 }
+
+exec mako
 
 exec swayidle -w \
   timeout 300 'swaylock-fancy' \
