--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -34,17 +34,6 @@ client.background       $base07
 
 font pango:FontAwesome, Inconsolata 12
 
-set $ws1  "1:  "
-set $ws2  "2:  "
-set $ws3  "3:  "
-set $ws4  "4:  "
-set $ws5  "5:  "
-set $ws6  "6:  "
-set $ws7  "7:  "
-set $ws8  "8:  "
-set $ws9  "9:  "
-set $ws0 "10: "
-
 gaps inner $default_gaps_inner
 gaps outer $default_gaps_outer
 
@@ -56,14 +45,14 @@ floating_minimum_size -1 x -1
 floating_maximum_size -1 x -1
 
 # assign apps to workspaces
-assign [class="jetbrains-idea-ce"]               $ws1
-assign [app_id="sublime_text|code-oss"]          $ws2
-assign [app_id="termite"]                        $ws3
-assign [class="Gnome-terminal"]                  $ws4
-assign [class="DBeaver"]                         $ws5
-assign [class="Chromium|Brave-browser|Firefox"]  $ws7
-assign [class="slack|Slack"]                     $ws8
-assign [app_id="deluge|Tixati"]                  $ws9
+assign [class="jetbrains-idea-ce"]               $ws0
+assign [app_id="sublime_text|code-oss"]          $ws1
+assign [app_id="termite"]                        $ws2
+assign [class="Gnome-terminal"]                  $ws3
+assign [class="DBeaver"]                         $ws4
+assign [class="Chromium|Brave-browser|Firefox"]  $ws6
+assign [class="slack|Slack"]                     $ws7
+assign [app_id="deluge|Tixati"]                  $ws8
 
 
 for_window [window_role="pop-up"]          floating enable
@@ -87,7 +76,7 @@ bindsym $mod+Return exec $ter
 bindsym $mod+k kill
 
 # start dmenu
-bindsym $mod+d exec rofi -show run
+bindsym $mod+d exec rofi -show drun
 
 # change focus
 bindsym $mod+h focus left
@@ -129,28 +118,28 @@ bindsym $mod+space focus mode_toggle
 
 
 # switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws0
+bindsym $mod+1 workspace 0
+bindsym $mod+2 workspace 1
+bindsym $mod+3 workspace 2
+bindsym $mod+4 workspace 3
+bindsym $mod+5 workspace 4
+bindsym $mod+6 workspace 5
+bindsym $mod+7 workspace 6
+bindsym $mod+8 workspace 7
+bindsym $mod+9 workspace 8
+bindsym $mod+0 workspace 9
 
 # move focused container to workspace
-bindsym $mod+shift+1 move container to workspace $ws1
-bindsym $mod+shift+2 move container to workspace $ws2
-bindsym $mod+shift+3 move container to workspace $ws3
-bindsym $mod+shift+4 move container to workspace $ws4
-bindsym $mod+shift+5 move container to workspace $ws5
-bindsym $mod+shift+6 move container to workspace $ws6
-bindsym $mod+shift+7 move container to workspace $ws7
-bindsym $mod+shift+8 move container to workspace $ws8
-bindsym $mod+shift+9 move container to workspace $ws9
-bindsym $mod+shift+0 move container to workspace $ws0
+bindsym $mod+shift+1 move container to workspace 0
+bindsym $mod+shift+2 move container to workspace 1
+bindsym $mod+shift+3 move container to workspace 2
+bindsym $mod+shift+4 move container to workspace 3
+bindsym $mod+shift+5 move container to workspace 4
+bindsym $mod+shift+6 move container to workspace 5
+bindsym $mod+shift+7 move container to workspace 6
+bindsym $mod+shift+8 move container to workspace 7
+bindsym $mod+shift+9 move container to workspace 8
+bindsym $mod+shift+0 move container to workspace 9
 
 bindsym $mod+ctrl+h move workspace to output left
 bindsym $mod+ctrl+s move workspace to output right
@@ -189,39 +178,10 @@ mode "$system" {
   bindsym Escape mode "default"
 }
 
-
 bar {
-	position top
-	strip_workspace_numbers yes
-    font pango:FontAwesome, Inconsolata 12
-
-	colors {
-	    background $base00
-	    separator  $base01
-	    statusline $base04
-
-	    # State             Border  BG      Text
-	    focused_workspace   $base05 $base0D $base00
-	    active_workspace    $base05 $base03 $base00
-	    inactive_workspace  $base03 $base01 $base05
-	    urgent_workspace    $base08 $base08 $base00
-	    binding_mode        $base00 $base0A $base00
-	}
-	status_command /home/cvelin/code/bumblebee-status/bumblebee-status \
-		--markup pango \
-		-m \
-            taskwarrior2 \
-			vpn \
-			github \
-			pasink \
-			datetime \
-			battery \
-		-p \
-			datetime.format="%d %b, %H:%M" \
-			datetime.interval="10" \
-			github.token="" \
-		-t onedark-powerline
+    swaybar_command /usr/bin/waybar
 }
+
 
 exec mako
 
