--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -13,11 +13,14 @@ cursor_shape = underline
 scrollbar = off
 
 [colors]
+# Base16 OneDark
+# Author: Lalit Magant (http://github.com/tilal6991)
+
 foreground          = #abb2bf
-foreground_bold     = #b6bdca
-cursor              = #b6bdca
+foreground_bold     = #abb2bf
+cursor              = #abb2bf
 cursor_foreground   = #282c34
-background          = rgba(40, 44, 52, 0.8)
+background          = rgba(40,44,52,0.8)
 
 # 16 color space
 
@@ -58,6 +61,4 @@ color18 = #353b45
 color19 = #3e4451
 color20 = #565c64
 color21 = #b6bdca
-
-
 # vim: ft=dosini cms=#%s
