--- a/home/.config/waybar/config
+++ b/home/.config/waybar/config
@@ -4,7 +4,7 @@
     "height": 30,
     "modules-left": ["sway/mode","sway/window"],
     "modules-center": ["sway/workspaces"],
-    "modules-right": ["pulseaudio", "battery", "tray", "clock"],
+    "modules-right": ["custom/vpn","backlight","pulseaudio","battery","clock","tray"],
     "sway/workspaces": {
         "persistent_workspaces": {
             "0": [],
@@ -21,17 +21,17 @@
         "disable-scroll": true,
         "all-outputs": false,
         "format": "{icon}",
-        "format-icons": {
+        "format-icons": {          
             "0": "",
-            "1": "",
-            "2": "",
+            "1": "",
+            "2": "",
             "3": "",
             "4": "",
             "5": "",
-            "6": "",
+            "6": "",
             "7": "",
             "8": "",
-            "9": "",
+            "9": "",
             "focused": " "
         }
     },
@@ -53,7 +53,7 @@
     "pulseaudio": {
         "format": "{volume}% {icon}",
         "format-bluetooth": "{volume}% {icon}",
-        "format-muted": "",
+        "format-muted": "",
         "format-icons": {
             "headphones": "",
             "handsfree": "",
@@ -64,5 +64,19 @@
             "default": ["", ""]
         },
         "on-click": "pavucontrol"
+    },
+    "custom/vpn": {
+        "format": "",
+        "exec": "echo '{\"class\": \"connected\"}'",
+        "exec-if": "test -d /proc/sys/net/ipv4/conf/azirevpn-se1",
+        "return-type": "json",
+        "interval": 5
+    },
+    "backlight": {
+        "device": "intel_backlight",
+        "format": "{percent}% {icon}",
+        "format-icons": [""],
+        "on-scroll-up": "brightnessctl -d intel_backlight set +5%",
+        "on-scroll-down": "brightnessctl -d intel_backlight set 5%-"
     }
 }
